--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "test:e2e": "playwright test",
-    "analyze": "vite build"
+    "analyze": "vite build",
+    "postbuild": "cp dist/index.html dist/404.html || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
